Implement "res/editor/resources.xml" for exporting custom gooballs